# sir_lock

./: Cargo.toml  README.md  cl.json  compare_circuit_targeted_c  compare_circuit_targeted_c_var  compare_circuit_targeted_m  compare_circuit_targeted_m_var  compare_limited_none_c  compare_limited_none_c_var  compare_random_targeted_c  compare_random_targeted_c_var  compare_random_targeted_m  compare_random_targeted_m_var  critlam.json  critlambda.json  fit.gp  fit_1000.gp  fit_1200.gp  fit_1600.gp  fit_200.gp  fit_2000.gp  fit_2400.gp  fit_2500.gp  fit_2800.gp  fit_3000_limit_cont.gp  fit_3200.gp  fit_400.gp  fit_600.gp  fit_800.gp  fitting_critical_lambda.gp  grid_test.gp  l.json  largedeviations.json  ldldss.json  ldss.json  ldssmarkov.json  lifespan.json  ls.json  lsf.json  lsfnew.json  (+23 more)
CritLamDataFiles/: fit_1600.gp  fit_2000.gp  fit_3000.gp  fitting_critical_lambda_for_limiting.gp  scanlam.json  sl.json
CritLamDataFiles/100.000 samples sim/: cl.json
LargedevDatafiles/: firstsim.merged  firstsimmerged.json  v0.1.1_Rewl_LDHD_N200r0.14t0.1763LockTypeRandomrel0.05lockth1.1Gba210GS875629289SS1489264107025_NI2_1-end.bincode  v0.1.1_Rewl_LDHD_N200r0.14t0.1763LockTypeRandomrel0.05lockth1.1Gba210GS875629289SS1489264107025_NI2_1-end_1.hist
LargedevDatafiles/First Sim/: largedeviations.json  (+1 more)
LifeSpanDataFiles/: ls.json
src/: grid.rs  json_parsing.rs  large_deviations.rs  life_span_data_collection.rs  life_span_size_fitting_lambdascan.rs  lockdown_methods.rs  main.rs  new_sir_transfer.rs  old_main.rs  simple_sampling.rs  sir_model.rs  stats_methods.rs
(+66 files in other folders)
