[package]
name = "sir_lock"
version = "0.2.6"
edition = "2021"
#trying out many patient zero
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net_ensembles = { git = "https://github.com/Pardoxa/net_ensembles.git", rev = "61a87ad900fb7284b68760ce6cead0b972c720c8" }
serde = "1.0.137"
rand = "0.8.5"
rand_pcg = { version = "0.3.0", features = ["serde1"]}
rayon = "1.5"
indicatif = {version = "0.15", features = ["improved_unicode", "rayon"]}
serde_json = "1.0"
structopt = "^0.3.21"
humantime = "^2.1"
rand_distr = "0.4.3"
#sampling = "0.1.1"
bincode = "1.3.3"

[features]
# Defines a feature named `webp` that does not enable any other features.
ldprint = []
